WORKING restructure and migration to gradle compiling and direct JPF JAR integration
FEAT:
JPF now runs directly from JAR's in libs/

FIX: Python can now correctly integrate the compiled files and custom search algorithms with the JAR.

From this point onwards, CLASSPATH in .jpf needs to point into CupTest/app/build/classes/java/main which contains the generated .class files

--- a/CupTest/app/build.gradle
+++ b/CupTest/app/build.gradle
@@ -23,6 +23,10 @@ dependencies {
 
     // This dependency is used by the application.
     implementation libs.guava
+
+    // JPF jars in CupTest/libs/
+    compileOnly fileTree(dir: 'libs', include: ['*.jar'])
+    testCompileOnly fileTree(dir: 'libs', include: ['*.jar'])
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
@@ -30,6 +34,10 @@ java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(11)
     }
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.release = 11   // ensures class file version 55
 }
 
 application {
